# statecrafting

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json  spec-spine.toml  tsconfig.json
.derived/codebase-index/by-package/: _statecrafting_toolchain-darwin-arm64.json  _statecrafting_toolchain-linux-arm64.json  _statecrafting_toolchain-linux-x64.json  _statecrafting_toolchain.json  fleet-native.json  governance-native.json  hiqlite-native.json  kernel-native.json  statecrafting.json
.derived/codebase-index/by-spec/: 000-bootstrap.json  001-packages-thesis.json  002-toolchain.json  003-hiqlite-native.json  004-kernel-native.json  005-governance-native.json  006-fleet-native.json
.derived/spec-registry/by-spec/: 000-bootstrap.json  001-packages-thesis.json  002-toolchain.json  003-hiqlite-native.json  004-kernel-native.json  005-governance-native.json  006-fleet-native.json
.github/workflows/: publish.yml  spec-spine.yml
addon/fleet-native/: Cargo.toml  build.rs  package-lock.json  package.json
addon/fleet-native/src/: kube_ops.rs  lib.rs  naming.rs  napi_api.rs  resources.rs  types.rs
addon/governance-native/: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json
addon/governance-native/config/: gate.v1.json
addon/governance-native/src/: canon.rs  gate.rs  ledger.rs  lib.rs  napi_api.rs  trust.rs
addon/hiqlite-native/: .gitignore  Cargo.toml  package-lock.json  package.json  sanity.mjs
addon/hiqlite-native/src/: lib.rs
addon/kernel-native/: .gitignore  Cargo.toml  build.rs  package-lock.json  package.json  rust-toolchain.toml
addon/kernel-native/src/: adjudicate.rs  gate.rs  kernel.rs  kinds.rs  ladder.rs  lib.rs  model.rs  napi_api.rs  payload.rs  tables.rs  wire.rs
addon/kernel-native/tests/: composition.rs
scripts/: check-licenses.mjs
specs/000-bootstrap/: spec.md
specs/001-packages-thesis/: spec.md
specs/002-toolchain/: spec.md
specs/003-hiqlite-native/: spec.md
specs/004-kernel-native/: spec.md
specs/005-governance-native/: spec.md
specs/006-fleet-native/: spec.md
standards/spec/: constitution.md  contract.md
standards/spec/templates/: constitution-template.md  spec-template.md
