[package]
name = "hiqlite-native"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "in-process hiqlite capability: cache/KV with TTL + raft-replicated counters, exposed to Encore.ts via napi-rs."

[package.metadata.spec-spine]
spec = "003-hiqlite-native"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "3"
# cache-only feature set: no `sqlite` feature, so no bundled rusqlite/SQLite-C.
# `counters` and `dlock`/`listen_notify` all ride on `cache`; we add the latter
# two only when the TS surface actually exposes them.
hiqlite = { version = "=0.14.0", default-features = false, features = ["cache", "counters", "macros"] }
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
